Bug 413053 - Bookmark Dialogs: Align treeview and listview, r=dietrich+dao, a191=beltzner

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1263,6 +1263,11 @@ statusbarpanel#statusbar-display {
   font-size: 130%;
 }
 
+/* Implements editBookmarkPanel resizing on folderTree un-collapse. */
+#editBMPanel_folderTree {
+  min-width: 300px;
+}
+
 /* ::::: content area ::::: */
 
 #sidebar {
